feat: HttpRequest 예외 처리 로직 제거 및 throws로 변경